--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/recharts": "^1.8.23",
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-tagcloud": "^2.2.0",
+    "recharts": "^2.1.9",
     "recoil": "^0.6.1",
     "types.d.ts": "^0.6.6",
     "typescript": "^4.5.5",
@@ -49,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-tagcloud": "^1.1.7",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22"
